...
        2, 3, 4 -> few
        else -> many
    }
}

object RuStrings : Strings {
    override val navHome = "Главная"
    override val navPlace = "Проекты"
    override val navLibrary = "Библиотека"
    override val navCoverage = "Покрытие"
    override val navSettings = "Настройки"
    override val navCollapseSidebar = "Свернуть меню"
    override val navExpandSidebar = "Развернуть меню"
    override val navResolve = "Конфликты"
    override val resolveOpenPlace = "Открыть проект"
...
